--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -1,10 +1,91 @@
-/*
-Colors to use:
-dark blue: #06365f
-light blue: #1c5380
-*/
-
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.blue-box {
+  background-image: url(../images/bgtile.png);
+  background-repeat: repeat;
+  height: 280px;
+  width: 100%;
+}
+
+.content {
+  position: relative;
+  margin: auto;
+  margin-bottom: 125px;
+  top: 30px;
+}
+
+.brand {
+  padding-top: 160px;
+  padding-right: 20px;
+  margin-left: 103px;
+}
+
+.phones {
+  float: left;
+  padding-left: 150px;
+  padding-top: 150px;
+}
+
+.frame {
+  margin-left: 100px;
+  margin-top: -70px;
+}
+.one {
+  width: 50%;
+}
+
+.text {
+  color: #06365f;
+  font-size: 18px;
+  line-height: 1.75;
+  margin-left: 600px;
+  margin-right: 400px;
+  margin-top: -290px;
+  margin-bottom: 30px;
+}
+
+.iphone {
+  width: 50%;
+  margin-top: 0px;
+  margin-left: 600px;
+}
+
+.andriod {
+  width: 50%;
+  margin-top: -57px;
+  margin-left: 800px;
+}
+
+.footer {
+  text-align: center;
+  padding-left: 300px;
+}
+
+li {
+  list-style: none;
+}
+
+ul li {
+    float: left;
+}
+
+ul li a {
+    text-decoration: none;
+    padding: 2px 12px;
+    width: 100px;
+    height: 52px;
+    vertical-align: middle;
+}
+
+/*.button {
+  margin-left: 900px;
+  margin-top: -60px;
+  color: white;
+  font-family: Arial, sans-serif;
+  font-weight: lighter;
+  border-style: solid;
+  border-width: 2px;
+}*/
