--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,132 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+a:active, a:visited {
+  color: inherit;
+  text-decoration: none;
+}
+
+.header {
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
+  height: 270px;
+}
+
+.container {
+  margin: -180px 120px 0;
+}
+
+.main_wrapper:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.content_image {
+  float: left;
+  width: 40%;
+}
+
+.content {
+  float: left;
+  width: 60%;
+  position: relative;
+  font-size: 15px;
+}
+
+.login_logo {
+  background-image: url("../images/brand.png");
+  background-repeat: no-repeat;
+  width: 314px;
+  height: 78px;
+  font-size: 0;
+  float: left;
+  position: absolute;
+  left: 50px;
+}
+
+.login_action {
+  position: absolute;
+  background-color: lightblue;
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
+  background: #6E92B0;
+  background: -webkit-linear-gradient(#6E92B0, #497499);
+  background: -o-linear-gradient(#6E92B0, #497499);
+  background: -moz-linear-gradient(#6E92B0, #497499);
+  background: linear-gradient(#6E92B0, #497499);
+  color: white;
+  text-decoration: none;
+  padding: 10px 15px 10px 45px;
+  border: 2px solid #315D84;
+  -webkit-box-shadow: 0px 2px 1px #3B6487;
+  -moz-box-shadow: 0px 2px 1px #3B6487;
+  box-shadow: 0px 2px 1px #3B6487;
+  right: 8px;
+  top: 15px;
+}
+
+.login_action:before {
+  content: url("../images/home.png");;
+  position: absolute;
+  width: 25px;
+  height: 22px;
+  top: 50%;
+  margin-top: -11px;
+  left: 8px;
+}
+
+.card {
+  margin: 100px 0 0 50px;
+  background-color: white;
+  background: url("../images/frame.png");
+  background-repeat: no-repeat;
+  -webkit-background-size: 100%;
+  background-size: 100%;
+  padding: 30px;
+}
+
+.card_title {
+  font-size: 26px;
+  font-weight: bold;
+  color: #06365f;
+  width: 270px;
+  line-height: 30px;
+}
+
+.card_title + .card_content {
+  margin-top: 25px;
+}
+
+.card_content_actions {
+  margin: 20px auto 0;
+}
+
+.card_content_actions >* {
+  display: inline-block;
+}
+
+.card_content_actions a + a {
+  margin-left: 15px;
+}
+
+.footer_list {
+  list-style-type: none;
+  text-transform: uppercase;
+  margin: 40px auto;
+  text-align: center;
+}
+
+.footer_list li {
+  display: inline-block;
+  margin-right: 10px;
+  color: #3F6C94;
+  font-size: 12px;
+  font-weight: bold;
+}
+
+.footer_list .copyright {
+  color: lightgray;
+}
