--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,74 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+header {
+  background-color: #1c5380;
+  height: 35vh;
+}
+section {
+  position: fixed;
+  top: 120px;
+  width: 100%;
+}
+#content {
+  margin-left: 300px;
+}
+#phones {
+  float: left;
+  padding-right: 60px;
+}
+#middleRigth {
+  float: left;
+  width: 40%;
+}
+button {
+  border: 1px solid #06365f;
+  border-radius: 5px;
+  background-color: #1c5380;
+  color: white;
+  padding-top: 7px;
+  padding-bottom: 7px;
+  float: right;
+  margin-right: 20px;
+  margin-top: 10px;
+  font-size: 15px;
+}
+#imgButton {
+  margin-right: 5px;
+}
+#imgBrand {
+  width: 50%;
+}
+#upRigth {
+  margin-top: 10px;
+}
+#centerRigth {
+  background-image: url("../images/frame.png");
+  padding: 23px;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+h1 {
+  color: #06365f;
+}
+#bottomRigth {
+  margin-left: 20px;
+}
+footer {
+  position: fixed;
+  bottom: 50px;
+  margin-left: 400px;
+}
+a {
+  color: #1c5380;
+  padding-left: 5px;
+  padding-right: 5px;
+  font-weight: 500;
+  text-transform: uppercase;
+}
+span {
+  color: grey;
+  font-weight: 500;
+  margin-left: 10px;
+}
