--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,86 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  padding: 0;
+}
+
+header {
+  background-image: url("../images/bgtile.png");
+  height: 39vh;
+}
+
+.wrap {
+  width: 100%;
+  position: absolute;
+  top: 100px;
+  margin-left: 10%;
+  margin-right: 10%;
+}
+
+#phone {
+  float: left;
+  width: 30vw;
+  margin-right: 20px;
+}
+.info-instagram {
+  float: left;
+  width: 39vw;
+}
+
+#firstrow {
+}
+
+button {
+  background-color: #4D7799;
+  border-color: #335F84;
+  color: white;
+  margin-left: 50px;
+  border-radius: 3px;
+  padding-top: 6px;
+  padding-bottom: 6px;
+  padding-left: 20px;
+  padding-right: 20px;
+  float:right;
+}
+
+#bodytext {
+  background-image: url("../images/frame.png");
+
+}
+
+h2 {
+  padding-left: 35px;
+  padding-right: 50px;
+  padding-top: 35px;
+  color: #264B6B;
+}
+
+p {
+  padding-left: 35px;
+  padding-right: 35px;
+  font-size: 14px;
+  color: #darkgrey;
+}
+
+#app {
+  margin-top: 35px;
+  margin-left:35px;
+}
+
+footer {
+  margin-top: 400px;
+  text-transform: uppercase;
+  font-weight: bold;
+  text-align: center;
+  clear: left;
+}
+
+footer a {
+  margin-right: 15px;
+  color: #537A9B;
+  text-decoration: none;
+}
+
+#copyIG {
+  color: #B8B9B9;
 }
