--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -1,10 +1,119 @@
-/*
-Colors to use:
-dark blue: #06365f
-light blue: #1c5380
-*/
-
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url(../images/bgtile.png);
+  background-repeat: repeat-x;
+}
+
+
+/* MIDDLE CONTAINER*/
+
+.c-section {
+  height: 400px;
+  margin: 120px;
+}
+
+
+/*LEFT CONTAINER*/
+
+.section-Left {
+  float: left;
+  width: 45%
+}
+
+.phones {
+  float: right;
+  margin: 50px;
+}
+
+
+/*RIGHT CONTAINER*/
+
+.section-Right {
+  padding-top: 50px;
+  float: left;
+}
+
+.logo-instagram {
+  width: 250px;
+}
+
+
+/*BUTTON*/
+
+.button {
+  float: right;
+  position: relative;
+  top: 20px;
+  padding: 5px;
+  border-radius: 3px;
+  font-weight: bold;
+  background-color: inherit;
+  color: white;
+  text-align: center;
+}
+
+.home {
+  margin-right: 8px;
+}
+
+
+/*TEXT CONTAINER*/
+
+.text-container {
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+}
+
+.text-top {
+  width: 400px;
+  padding-left: 20px;
+  padding-top: 20px;
+  font-size: 28px;
+  font-weight: bold;
+  color: #06365f;
+}
+
+.text {
+  width: 420px;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-top: 20px;
+}
+
+
+/*SHOP CONTAINER*/
+
+.shop-wrap {
+  padding-left: 40px;
+  padding-top: 40px;
+}
+
+.badge-android {
+  padding-left: 10px;
+}
+
+.badge-iphone {
+  padding-right: 10px;
+}
+
+
+/*FOOTER*/
+
+.footer {
+  text-align: center;
+  padding-top: 100px;
+  word-spacing: 15px;
+}
+
+a {
+  font-weight: bold;
+  font-size: 0.8em;
+  color: RGB(108, 147, 179);
+  text-decoration: none;
+}
+
+#copy {
+  color: RGB(183, 183, 183);
+  word-spacing: normal;
 }
