--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -5,6 +5,89 @@ light blue: #1c5380
 */
 
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+    font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+    margin: 0;
+    background-image: url(..\images\bgtile.png);
+    background-repeat: repeat-x;
+    font-family: sans-serif;
+    width: 100%;
+    height: 3000px;
+}
+
+.firsdiv {
+    background-color: #4c68d7;
+    height: 300px;
+}
+
+.block {
+    padding-left: 900px;
+    padding-top: 150px;
+}
+
+.logo {
+    top: 160px;
+    left: 5px;
+    float: left;
+}
+
+.home {
+    position: absolute;
+    left: 50px;
+}
+
+.login {
+    position: absolute;
+    top: 168px;
+    left: 1200px;
+    bottom: 1;
+    float: left;
+    border: 5px;
+    height: 40px;
+    width: 120px;
+    padding-top: 12px;
+    padding-left: 10px;
+    background-color: #125688;
+    color: white;
+    border-radius: 8px;
+    margin-left: 70px;
+}
+
+.phones {
+    position: absolute;
+    top: 100px;
+    left: 350px;
+}
+
+.square {
+    background-color: white;
+    font-family: sans-serif;
+    position: absolute;
+    top: 250px;
+    left: 800px;
+    border: 5px;
+    width: 400px;
+    padding-top: 12px;
+    padding-left: 50px;
+    border-radius: 8px;
+    color: darkblue;
+}
+
+.foot {
+    position: fixed;
+    bottom: 0;
+    right: 30%;
+    color: #111;
+    font-weight: bold;
+    padding: 10px;
+    text-align: center;
+    color: darkblue;
+    word-spacing: 10px;
+}
+
+a. {
+    color: blue;
+}
+
+.f {
+    color: gray;
 }
